# robocup-software

./: .gitmodules  CMakeLists.txt  circle.yml
firmware/base2015/: BaseStationDevice.cpp  BaseStationDevice.h  CMakeLists.txt  main.cpp
firmware/mbed/: arm_mbed.cmake  arm_toolchain.cmake
firmware/robot2015/cpu/: PhaseDriver.cpp  PhaseDriver.hpp  bldc.hpp  main.cpp
firmware/robot2015/fpga/: BLDC_ADC.v  BLDC_Driver.v  BLDC_Motor.v  Hall_Effect_Sensor.v  Phase_Driver.v  SPI_Comm.v  robocup.v  sim_bldc_driver.tb.v
planner-visualizer/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  PlannerVisualizerFieldView.cpp  PlannerVisualizerFieldView.hpp  main.cpp
planner-visualizer/ui/: MainWindow.ui
run/: .gitignore
soccer/: CMakeLists.txt
soccer/planning-visualizer/: CMakeLists.txt
